--- a/style.css
+++ b/style.css
@@ -471,6 +471,24 @@ footer{border-top:1px solid var(--border);background:#fff;margin-top:40px}
   user-select:none;
 }
 
+.socialIcon{
+  width:14px;
+  height:14px;
+  display:block;
+}
+
+.srOnly{
+  position:absolute;
+  width:1px;
+  height:1px;
+  padding:0;
+  margin:-1px;
+  overflow:hidden;
+  clip:rect(0,0,0,0);
+  white-space:nowrap;
+  border:0;
+}
+
 .siteFooter .socialBtn:hover{
   border-color:rgba(255,255,255,.55);
 }
